--- a/style2.css
+++ b/style2.css
@@ -109,7 +109,7 @@ h1{
 }
 h2{
     padding: 2rem 2rem 2rem 8rem;
-    font-size: 1.4em;
+    font-size: 22.4px;
 }
 .learn{
     font-size: 1.2em;
@@ -200,7 +200,7 @@ h4{
     }
     h2{
         padding: 2rem 2rem 0rem 2rem;
-        font-size: 1.4em;
+        font-size: 22.4px;
     }
     .middle-img{
         display: none;
@@ -256,7 +256,7 @@ h4{
     }
     h2{
         padding: 2rem 4rem 0rem 2rem;
-        font-size: 1.5em;
+        font-size: 22.4px;
     }
     .paragraph{
         display: flex;
