--- a/style2.css
+++ b/style2.css
@@ -233,7 +233,8 @@ h4{
         text-align: center;
     }
     .new{
-        padding-left: 0;
+        padding-left: 10;
+        font-size: 1.2em;
         margin-left: 100px;
     }
     h1{
