--- a/style2.css
+++ b/style2.css
@@ -170,7 +170,7 @@ h4{
 }
 
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-device-width: 700px) {
     .section-1, .section-2{
         padding: 0;
         display: flex;
