--- a/style2.css
+++ b/style2.css
@@ -362,7 +362,7 @@ h4{
         justify-content: center;
     }
     .logo-img{
-        max-width: 100px;
+        max-width: 10%;
         padding-top: 3%;
     }
     .address{
