--- a/style2.css
+++ b/style2.css
@@ -323,7 +323,6 @@ h4{
 
 @media only screen 
   and (min-device-width: 375px) 
-  and (max-device-width: 812px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
      .section-1, .section-2{
         padding: 0;
@@ -333,9 +332,9 @@ h4{
         width: 100vw;
     }
     .left{
-        height: 900px;
+        height: 200px;
         width: 100%;
-        padding: 0 0 0 0;
+        padding: 0;
     }
     .right{
         height: 900px;
