--- a/style2.css
+++ b/style2.css
@@ -357,10 +357,12 @@ h4{
         padding: 0 5% 0 5%;
     }
     .logo{
+        max-height: 100px;
         display: flex;
         justify-content: center;
     }
     .logo-img{
+        max-height: 100px;
         max-width: 10%;
         padding-top: 3%;
     }
