--- a/style2.css
+++ b/style2.css
@@ -328,7 +328,7 @@ h4{
         padding: 0;
         display: flex;
         flex-direction: column;
-        height: 100vh;
+        height: 2000px;
         width: 100vw;
     }
     .left{
